--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="calc">
+    <div id="calc">
       <h3>Calculadora</h3>
       <div id="operations">
-        <div id="previus-operation">123 +</div>
+        <div id="previus-operation">123+</div>
         <div id="current-operation">456</div>
       </div>
       <div id="buttons-container">
