--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
         <div id="previus-operation">123+</div>
         <div id="current-operation">456</div>
       </div>
-      <div id="buttons-container">
-        <button>CE</button>
-        <button>C</button>
-        <button>DEL</button>
-        <button>/</button>
+      <div class="buttons-container">
+        <button class="erase">CE</button>
+        <button class="erase">C</button>
+        <button class="erase">DEL</button>
+        <button class="operator">/</button>
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button>*</button>
+        <button class="operator">*</button>
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button>-</button>
+        <button class="operator">-</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button>+</button>
+        <button class="operator">+</button>
         <button class="number">0</button>
         <button class="number">.</button>
-        <button id="equal-button">=</button>
+        <button id="equal-button" class="operator">=</button>
       </div>
     </div>
   </body>
