--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="calc">
       <h3>Calculadora</h3>
       <div id="operations">
-        <div id="previus-operation">123+</div>
-        <div id="current-operation">456</div>
+        <div id="previous-operation"></div>
+        <div id="current-operation"></div>
       </div>
       <div class="buttons-container">
         <button class="erase">CE</button>
